[gd_scene load_steps=36 format=2]

[ext_resource path="res://world_objects/villager/Villager.gd" type="Script" id=1]
[ext_resource path="res://assets/sunnyside_world_chatacter_anim_GOBLIN.png" type="Texture" id=2]
[ext_resource path="res://assets/watering.ogg" type="AudioStream" id=3]
[ext_resource path="res://util/JukeBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/goblin-02.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/goblin-01.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/goblin-03.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/goblin-04.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/goblin-05.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/goblin-07.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/goblin-06.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/footsteps-grass-01.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/footsteps-grass-02.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/footsteps-grass-03.ogg" type="AudioStream" id=15]
[ext_resource path="res://assets/footsteps-grass-04.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/footsteps-grass-06.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/footsteps-grass-07.ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/footsteps-grass-08.ogg" type="AudioStream" id=19]
[ext_resource path="res://assets/shadow.png" type="Texture" id=20]

[sub_resource type="Animation" id=26]
resource_name = "Carry_Left"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_play_walk_sound"
}, {
"args": [  ],
"method": "_play_walk_sound"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "Carry_Right"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28, 29, 30 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_play_walk_sound"
}, {
"args": [  ],
"method": "_play_walk_sound"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "Chopping_Left"
length = 0.75
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 230, 231, 232, 233, 234, 235, 236, 237, 238, 239 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=37]
resource_name = "Chopping_Right"
length = 0.75
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 230, 231, 232, 233, 234, 235, 236, 237, 238, 239 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=51]
resource_name = "Digging_Left"
length = 0.975
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525, 0.975 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=50]
resource_name = "Digging_Right"
length = 0.975
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525, 0.975 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=44]
resource_name = "Doing_Left"
length = 0.6
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 138, 139, 140, 141, 142, 143, 144, 145 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
} ]
}

[sub_resource type="Animation" id=43]
resource_name = "Doing_Right"
length = 0.6
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 138, 139, 140, 141, 142, 143, 144, 145 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.525 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle_Left"
length = 0.675
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle_Right"
length = 0.675
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 46 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Run_Left"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_play_walk_sound"
}, {
"args": [  ],
"method": "_play_walk_sound"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "Run_Right"
length = 0.6
loop = true
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_play_walk_sound"
}, {
"args": [  ],
"method": "_play_walk_sound"
} ]
}

[sub_resource type="Animation" id=32]
resource_name = "Watering_Left"
length = 0.375
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.225, 0.375 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="Animation" id=31]
resource_name = "Watering_Right"
length = 0.375
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.225, 0.375 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_action_performed"
}, {
"args": [  ],
"method": "_animation_finished"
} ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 4.0

[node name="Villager" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 23
vframes = 20
frame = 46

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Carry_Left = SubResource( 26 )
anims/Carry_Right = SubResource( 25 )
anims/Chopping_Left = SubResource( 38 )
anims/Chopping_Right = SubResource( 37 )
anims/Digging_Left = SubResource( 51 )
anims/Digging_Right = SubResource( 50 )
anims/Doing_Left = SubResource( 44 )
anims/Doing_Right = SubResource( 43 )
anims/Idle_Left = SubResource( 4 )
anims/Idle_Right = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Run_Left = SubResource( 14 )
anims/Run_Right = SubResource( 13 )
anims/Watering_Left = SubResource( 32 )
anims/Watering_Right = SubResource( 31 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 24.0
path_max_distance = 30.0
avoidance_enabled = true
radius = 30.0
neighbor_dist = 50.0
time_horizon = 100.0

[node name="Camera2D" type="Camera2D" parent="." groups=["Cameras"]]
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true

[node name="VoiceSounds" parent="." instance=ExtResource( 4 )]

[node name="Voice1" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 6 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice2" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 5 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice3" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 7 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice4" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 8 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice5" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 9 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice6" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 11 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="Voice7" type="AudioStreamPlayer2D" parent="VoiceSounds"]
stream = ExtResource( 10 )
volume_db = -30.0
max_distance = 1000.0
attenuation = 3.86375
bus = "WorldAudio"

[node name="WalkOnGrassSounds" parent="." instance=ExtResource( 4 )]

[node name="WalkOnGrassSound01" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 13 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound02" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 14 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound03" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 15 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound04" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 16 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound05" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 13 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound06" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 17 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound07" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 18 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WalkOnGrassSound08" type="AudioStreamPlayer2D" parent="WalkOnGrassSounds"]
stream = ExtResource( 19 )
volume_db = -20.0
max_distance = 700.0
attenuation = 3.36358
bus = "WorldAudio"

[node name="WateringSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
max_distance = 700.0
attenuation = 2.0
bus = "WorldAudio"

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
